--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ sha2 ="0.10"
 ed25519-dalek = "1.0.1"
 rand = "0.7"
 hex = "0.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+ring = "0.17.5"
+base64 = "0.21.0"
