--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 ring = "0.17.5"
 base64 = "0.21.0"
+bs58 = "0.5"
+ripemd = "0.1.1"
